# url_shortener_demo

./: .env-sample  LICENSE  README.md  pyproject.toml  requirements.txt
shortener_app/: config.py  crud.py  database.py  keygen.py  main.py  models.py  schemas.py
